# vivid-state-machine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vivid-sm.pc.in
.github/: CODEOWNERS
examples/: CMakeLists.txt  application.h
examples/countdown/: CMakeLists.txt  application.c  countdown.c  countdown.h
examples/countdown_cpp/: CMakeLists.txt  application.cpp  countdown.h  countdown_cpp.cxx
examples/dispatch/: CMakeLists.txt  application.c  callee.c  callee.h  caller.c  caller.h
examples/platform/: CMakeLists.txt
examples/platform/freertos/: CMakeLists.txt  freertos-example.cmake  gcc-arm-none-eabi-toolchain.cmake  main.c  main_vsm.c  startup_gcc.c
examples/platform/libev/: CMakeLists.txt  main.c
examples/platform/linux/: CMakeLists.txt  main.c
examples/platform/win32/: main.c
examples/toaster/: CMakeLists.txt  application.c  toaster.c  toaster.h
inc/vivid/: binding.h  sm.h
inc/vivid/binding/: freertos.h  libev.h  linux.h  win32.h
inc/vivid/util/: log.h  periodic_timer.h  queue.h
src/: CMakeLists.txt  vivid_log.c  vivid_map.c  vivid_map.h  vivid_periodic_timer.c  vivid_priv.h  vivid_queue.c  vivid_sm.c  vivid_uml.c  vivid_uml.h
src/binding/: vivid_binding_freertos.c  vivid_binding_libev.c  vivid_binding_linux.c  vivid_binding_win32.c
tools/: vivid-gen.py
